# libgdf

./: .gitignore  .gitmodules  .travis.yml  99fd-a087-048c-76b4  CMakeLists.txt  README.md
cmake/CUDA-Utils/: get_cuda_arch.cu  get_cuda_cc.cu
cmake/Configuration/: ConfigBenchmark.cmake  ConfigCuda.cmake
cmake/Modules/: ConfigureArrow.cmake  ConfigureParquetCpp.cmake  GoogleBenchmark.cmake
cmake/Templates/: Arrow.CMakeLists.txt.cmake  GoogleBenchmark.CMakeLists.txt.cmake  ParquetCpp.CMakeLists.txt.cmake
conda_environments/: dev_py35.yml
include/: sqls_rtti_comp.hpp
include/gdf/: gdf.h
include/gdf/cffi/: functions.h  io_functions.h  io_types.h  types.h
include/gdf/parquet/: api.h  column_reader.h  file_reader.h
libgdf/: CMakeLists.txt
python/libgdf_cffi/: libgdf_build.py
python/tests/: testoutput
src/: column.cpp  gdf_table.cuh  hashing.cu  replace.cu  sqls_ops.cu  streamcompactionops.cu
src/arrow/: bit-stream.h  bpacking.cuh  cu-decoder.cu  cu-decoder.cuh  cu_decoder.cu  cu_decoder.cuh  rle_decoder.h
src/arrow/util/: pinned_allocator.cuh
src/bench/: CMakeLists.txt  binary-operation-benchmark.cpp
src/bench/binary-operation/: CMakeLists.txt  binary-operation-benchmark.cpp
src/bench/parquet/: CMakeLists.txt  parquet-benchmark.cu  parquet-multithread-benchmark.cu
src/bench/replace/: CMakeLists.txt  replace-benchmark.cu
src/binary/: CMakeLists.txt
src/binary-operation/: CMakeLists.txt
src/binary-operation/jit/code/: gdf-data.cpp  kernel.cpp  operation.cpp  traits.cpp
src/binary-operation/jit/core/: binop.cpp  launcher.cpp  launcher.h
src/binary-operation/jit/util/: operator.cpp  operator.h  type.cpp  type.h
src/binary/binary2/: binary.cpp  cuda.h  kernel.cpp  kernel.h  kernel_gdf_data.cpp  launcher.cpp  launcher.h  object.cpp  object.h  operation.cpp  operation.h  traits.cpp  traits.h  type.cpp  type.h
src/binary/common/: mediator.cu  operations.cuh  selector.h  types.cpp  types.h
src/io/: csvReader.cu  type_conversion.cuh
src/io/csv/: csv-reader.cu
src/join/: joining.cu
src/join/hash/: join_compute_api.h
src/parquet/: api.cpp  column_reader.cpp  column_reader.cu  column_reader.h  dictionary_decoder.cuh  dictionary_decoder.h  file_reader.cpp  file_reader.h  file_reader_contents.cpp  file_reader_contents.h  page_reader.cpp  page_reader.h  plain_decoder.cuh  plain_decoder.h  row_group_reader_contents.cpp  row_group_reader_contents.h
src/parquet/decoder/: cu_level_decoder.cu  cu_level_decoder.h
src/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tests/binary-operation/: CMakeLists.txt
src/tests/binary-operation/integration/: CMakeLists.txt  assert-binops.h  binary-operation-integration-test.cpp  binary-operation-operands-null-test.cpp  binary-operation-test.cpp
src/tests/binary-operation/unit/: CMakeLists.txt  binop-verify-input-test.cpp
src/tests/binary-operation/util/: field.h  operation.h  scalar.h  types.cpp  types.h  vector.h
src/tests/csv/: csv-test.cu
src/tests/datetime/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tests/filterops_numeric/: CMakeLists.txt  test_filterops.cu  test_gpu_concat.cu
src/tests/filterops_numeric/helper/: utils.cu  utils.cuh
src/tests/foo-sample/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tests/hashing/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tests/helper/: utils.cu  utils.cuh
src/tests/join/: CTestTestfile.cmake  Makefile  cmake_install.cmake  join-tests.cu  valid_vectors.h
src/tests/parquet/: CMakeLists.txt
src/tests/parquet/benchmark/: CMakeLists.txt  parquet-benchmark.cu  parquet-multithread-benchmark.cu  parquet_generator-test.cpp
src/tests/parquet/decoding/: CMakeLists.txt  decoding-test.cpp  decoding-test.cu  file_for_decoding.parquet  parquet_gdf.parquet
src/tests/parquet/file_reader/: CMakeLists.txt  api-test.cpp  api-test.cu  file_reader-benchmark.cpp  file_reader-test.cpp  null-test.cu  reader-test.parquet  single_column_file-test.cpp
src/tests/parquet/gdf_column/: CMakeLists.txt  gdf_column-test.cu  gdf_column_offset-test.cu
src/tests/replace/: CMakeLists.txt  replace-benchmark.cu  replace-test.cu  utils.h
src/tests/sqls/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/tests/test_utils/: gdf_test_utils.cuh
src/util/: bit_util.cuh
tests/: CMakeLists.txt
tests/parquet/: CMakeLists.txt
tests/parquet/decoding/: CMakeLists.txt  decoding-test.cpp
tests/parquet/file_reader/: CMakeLists.txt  file_reader-benchmark.cpp  file_reader-test.cpp  reader-test.parquet  single_column_file-test.cpp
travisci/: Dockerfile  install-cuda-trusty.sh  upload-anaconda.sh
